style Small fix for small screen readability

--- a/style/component/poll-results.scss
+++ b/style/component/poll-results.scss
@@ -35,11 +35,11 @@
   transition: background ease 0.2s;
 
   .id {
-    width: 30%;
+    width: 25%;
   }
 
   .grade {
-    width: 20%;
+    width: 25%;
     white-space: nowrap;
   }
 
