--- a/style/component/poll-vote-form.scss
+++ b/style/component/poll-vote-form.scss
@@ -27,7 +27,7 @@
 
   .id {
     padding: 0 0.2em;
-    min-width: 5em;
+    min-width: 7em;
     width: 22.5%;
   }
 
